// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Anchor Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

<body>
    <div>
      <a
        class="c0"
        href="https://www.google.com/"
        role="link"
      >
        simple link
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

<div>
    <a
      class="c0"
      href="https://www.google.com/"
      role="link"
    >
      simple link
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render Anchor Disabled anchor link 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  cursor: not-allowed;
  pointer-events: none;
  opacity: 0.6;
}

<body>
    <div>
      <a
        class="c0"
        disabled=""
        href="https://www.google.com/"
        role="link"
      >
        external link
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  cursor: not-allowed;
  pointer-events: none;
  opacity: 0.6;
}

<div>
    <a
      class="c0"
      disabled=""
      href="https://www.google.com/"
      role="link"
    >
      external link
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render Anchor Disabled anchor link dark 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,64%,1);
  cursor: not-allowed;
  pointer-events: none;
  opacity: 0.6;
}

<body>
    <div>
      <a
        class="c0"
        disabled=""
        href="https://www.google.com/"
        role="link"
      >
        external link
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,64%,1);
  cursor: not-allowed;
  pointer-events: none;
  opacity: 0.6;
}

<div>
    <a
      class="c0"
      disabled=""
      href="https://www.google.com/"
      role="link"
    >
      external link
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render Anchor External anchor link 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  gap: 0.25ch;
}

.c1 svg,
.c1 span {
  height: 0.8em !important;
  width: 0.8em !important;
}

<body>
    <div>
      <a
        class="c0"
        href="https://www.google.com/"
        role="link"
        target="_blank"
      >
        <span
          class="c1"
        >
          external link
          <span
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
        </span>
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  gap: 0.25ch;
}

.c1 svg,
.c1 span {
  height: 0.8em !important;
  width: 0.8em !important;
}

<div>
    <a
      class="c0"
      href="https://www.google.com/"
      role="link"
      target="_blank"
    >
      <span
        class="c1"
      >
        external link
        <span
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </span>
      </span>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render Anchor External anchor link dark 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,64%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  gap: 0.25ch;
}

.c1 svg,
.c1 span {
  height: 0.8em !important;
  width: 0.8em !important;
}

<body>
    <div>
      <a
        class="c0"
        href="https://www.google.com/"
        role="link"
        target="_blank"
      >
        <span
          class="c1"
        >
          external link
          <span
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
        </span>
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,64%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  gap: 0.25ch;
}

.c1 svg,
.c1 span {
  height: 0.8em !important;
  width: 0.8em !important;
}

<div>
    <a
      class="c0"
      href="https://www.google.com/"
      role="link"
      target="_blank"
    >
      <span
        class="c1"
      >
        external link
        <span
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </span>
      </span>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render Anchor Girths 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.5rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.625rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c1:hover,
.c1:active,
.c1:focus {
  background-size: 100% 25%;
}

.c2 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.75rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c2:hover,
.c2:active,
.c2:focus {
  background-size: 100% 25%;
}

.c3 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c3:hover,
.c3:active,
.c3:focus {
  background-size: 100% 25%;
}

.c4 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(1.25rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c4:hover,
.c4:active,
.c4:focus {
  background-size: 100% 25%;
}

.c5 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(1.75rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c5:hover,
.c5:active,
.c5:focus {
  background-size: 100% 25%;
}

.c6 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(2rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c6:hover,
.c6:active,
.c6:focus {
  background-size: 100% 25%;
}

<body>
    <div>
      <a
        class="c0"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        girth-
        xxs
      </a>
      <a
        class="c1"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        girth-
        xs
      </a>
      <a
        class="c2"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        girth-
        sm
      </a>
      <a
        class="c3"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        girth-
        md
      </a>
      <a
        class="c4"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        girth-
        lg
      </a>
      <a
        class="c5"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        girth-
        xl
      </a>
      <a
        class="c6"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        girth-
        xxl
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.5rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.625rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c1:hover,
.c1:active,
.c1:focus {
  background-size: 100% 25%;
}

.c2 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.75rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c2:hover,
.c2:active,
.c2:focus {
  background-size: 100% 25%;
}

.c3 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c3:hover,
.c3:active,
.c3:focus {
  background-size: 100% 25%;
}

.c4 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(1.25rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c4:hover,
.c4:active,
.c4:focus {
  background-size: 100% 25%;
}

.c5 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(1.75rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c5:hover,
.c5:active,
.c5:focus {
  background-size: 100% 25%;
}

.c6 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(2rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c6:hover,
.c6:active,
.c6:focus {
  background-size: 100% 25%;
}

<div>
    <a
      class="c0"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      girth-
      xxs
    </a>
    <a
      class="c1"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      girth-
      xs
    </a>
    <a
      class="c2"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      girth-
      sm
    </a>
    <a
      class="c3"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      girth-
      md
    </a>
    <a
      class="c4"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      girth-
      lg
    </a>
    <a
      class="c5"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      girth-
      xl
    </a>
    <a
      class="c6"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      girth-
      xxl
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render Anchor Renders with no styles dark 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,64%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

<body>
    <div>
      <a
        class="c0"
        href="https://www.google.com/"
        role="link"
      >
        simple link
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,64%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

<div>
    <a
      class="c0"
      href="https://www.google.com/"
      role="link"
    >
      simple link
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render Anchor Tones 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(271,81%,56%,1);
  background-image: linear-gradient( hsla(271,91%,65%,0.7), hsla(271,91%,65%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(333,71%,51%,1);
  background-image: linear-gradient( hsla(330,81%,60%,0.7), hsla(330,81%,60%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c1:hover,
.c1:active,
.c1:focus {
  background-size: 100% 25%;
}

.c2 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c2:hover,
.c2:active,
.c2:focus {
  background-size: 100% 25%;
}

.c3 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(221,83%,53%,1);
  background-image: linear-gradient( hsla(217,91%,60%,0.7), hsla(217,91%,60%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c3:hover,
.c3:active,
.c3:focus {
  background-size: 100% 25%;
}

.c4 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(142,76%,36%,1);
  background-image: linear-gradient( hsla(142,71%,45%,0.7), hsla(142,71%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c4:hover,
.c4:active,
.c4:focus {
  background-size: 100% 25%;
}

.c5 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(32,95%,44%,1);
  background-image: linear-gradient( hsla(38,92%,50%,0.7), hsla(38,92%,50%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c5:hover,
.c5:active,
.c5:focus {
  background-size: 100% 25%;
}

.c6 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,72%,51%,1);
  background-image: linear-gradient( hsla(0,84%,60%,0.7), hsla(0,84%,60%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c6:hover,
.c6:active,
.c6:focus {
  background-size: 100% 25%;
}

<body>
    <div>
      <a
        class="c0"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        major
      </a>
      <a
        class="c1"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        minor
      </a>
      <a
        class="c2"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        neutral
      </a>
      <a
        class="c3"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        info
      </a>
      <a
        class="c4"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        success
      </a>
      <a
        class="c5"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        warning
      </a>
      <a
        class="c6"
        href="/?path=/story/anchor--basic"
        role="link"
      >
        danger
      </a>
    </div>
  </body>,
  "container": .c0 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(271,81%,56%,1);
  background-image: linear-gradient( hsla(271,91%,65%,0.7), hsla(271,91%,65%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c0:hover,
.c0:active,
.c0:focus {
  background-size: 100% 25%;
}

.c1 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(333,71%,51%,1);
  background-image: linear-gradient( hsla(330,81%,60%,0.7), hsla(330,81%,60%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c1:hover,
.c1:active,
.c1:focus {
  background-size: 100% 25%;
}

.c2 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,0%,32%,1);
  background-image: linear-gradient( hsla(0,0%,45%,0.7), hsla(0,0%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c2:hover,
.c2:active,
.c2:focus {
  background-size: 100% 25%;
}

.c3 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(221,83%,53%,1);
  background-image: linear-gradient( hsla(217,91%,60%,0.7), hsla(217,91%,60%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c3:hover,
.c3:active,
.c3:focus {
  background-size: 100% 25%;
}

.c4 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(142,76%,36%,1);
  background-image: linear-gradient( hsla(142,71%,45%,0.7), hsla(142,71%,45%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c4:hover,
.c4:active,
.c4:focus {
  background-size: 100% 25%;
}

.c5 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(32,95%,44%,1);
  background-image: linear-gradient( hsla(38,92%,50%,0.7), hsla(38,92%,50%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c5:hover,
.c5:active,
.c5:focus {
  background-size: 100% 25%;
}

.c6 {
  margin: 0 0.5ch;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: calc(0.875rem + 0.125rem);
  color: hsla(0,72%,51%,1);
  background-image: linear-gradient( hsla(0,84%,60%,0.7), hsla(0,84%,60%,0.7) );
  background-size: 100% 0em;
  background-position-y: 100%;
  background-repeat: no-repeat;
  -webkit-transition: background-size 0.2s ease-in-out;
  transition: background-size 0.2s ease-in-out;
}

.c6:hover,
.c6:active,
.c6:focus {
  background-size: 100% 25%;
}

<div>
    <a
      class="c0"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      major
    </a>
    <a
      class="c1"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      minor
    </a>
    <a
      class="c2"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      neutral
    </a>
    <a
      class="c3"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      info
    </a>
    <a
      class="c4"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      success
    </a>
    <a
      class="c5"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      warning
    </a>
    <a
      class="c6"
      href="/?path=/story/anchor--basic"
      role="link"
    >
      danger
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
